New workwlow sample: simple batch processing.
